--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,30 @@ server {
     listen 80;
     server_name localhost;
 
+    
+    location /assets/ {
+        alias /usr/share/nginx/html/assets/;
+    }
+
     location / {
-        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html = 404;
+        index index.html index.htm;
+    }
+
+    location ~ \.(html)$ {
+        add_header Pragma "no-cache";
+        add_header Cache-Control "no-store";
+        add_header strict-transport-security "max-age=31536000";
+        add_header X-Frame-Options "SAMEORIGIN";
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Add any other custom Nginx configurations here
+    location ~ \.(css|htc|less|js|js2|js3|js4)$ {
+        expires 31536000s;
+        add_header Pragma "public";
+        add_header Cache-Control "max-age=31536000, public";
+        try_files $uri $uri/ /index.html;
+    }
+
 }
