--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.html = 404;
+        try_files $uri $uri/ /index.html;
         index index.html index.htm;
     }
 
