--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html = 404;
         index index.html index.htm;
     }
 
