--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,10 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     proxy_set_header Host $http_host;
 
-    
+    root /usr/share/nginx/html;
+
+    # Rest of your HTTPS configuration ...
+
     location /assets/ {
         alias /usr/share/nginx/html/assets/;
     }
