--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
 server {
-    listen 80 ssl;
+    listen 80;
     server_name www.assistrip.com assistrip.com;
-    ssl_certificate /etc/nginx/assistrip.com.chained.crt;
-    ssl_certificate_key /etc/nginx/nginx.key;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    proxy_set_header Host $http_host;
+    # ssl_certificate /etc/nginx/assistrip.com.chained.crt;
+    # ssl_certificate_key /etc/nginx/nginx.key;
+    # ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    # ssl_ciphers HIGH:!aNULL:!MD5;
+    # proxy_set_header Host $http_host;
 
     root /usr/share/nginx/html;
 
